Add the create package endpoint
